Ajout de visuels, historisation de la saisie dans le localStorage et possibilité d'exporter le contenu en fichier texte

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,6 +141,10 @@ code.language-php:after {
     transition: opacity .2s;
 }
 
+.slider-value.max-value-reached {
+    font-size: 3rem;
+}
+
 button {
     background-color: transparent;
     border: 1px solid #FFF;
