--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,10 @@
     margin: auto;
 }
 
+.v-hidden {
+    visibility: hidden;
+}
+
 .info {
     border: 2px solid #FFF;
     border-radius: 25px;
@@ -21,21 +25,30 @@
     cursor: pointer;
 }
 
-svg {
-    max-width: 100%;
-    max-height: 70vh;
+#img-q0 {
+    color: #FFFFFF;
+    font-weight: bold;
+    font-family: Calibri, serif;
+    font-size: 50px;
 }
 
-.logo-neo #logo-graphic {
-fill: #00a4e6;
+svg {
+    width: 100%;
+    max-width: 100%;
+    max-height: 25vh;
+}
+
+.logo-neo #logo-graphic,
+.logo-neo #logo-lettrage {
+    fill: #fff;
+}
+
+#quizz-container {
+    background-color: #070d58;
 }
 
 form {
     /*background: url(/assets/img/bg-news-lab.jpg) 100% no-repeat #070d58;*/
-    background-color: #070d58;
-    background-size: auto;
-    background-size: cover;
-
     color: #FFF;
 }
 
@@ -190,4 +203,12 @@ button:hover::before {
 
 .linkedin-logo path {
     fill: #FFF;
+}
+
+#email {
+    padding-top: 8px;
+    padding-bottom: 5px;
+    border-radius: 5px;
+    outline: none;
+    border: none;
 }
